# BogShahmat

./: CMakeLists.txt  README.md  bitboards_and_constants.h  evaluation.h  interaction.h  main.cpp  move_implementation.h  move_logic.h  perft.h  print_boards.h  print_moves.h  searching.h  server.h  zobrist.h
